# fastapi_template

./: README.md  code-quality-check.sh  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: database.py
app/adapters/: repository.py  schemas.py
app/core/: entities.py  use_cases.py
app/interfaces/: api.py
tests/: conftest.py  test_api.py  test_use_cases.py
